--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "4.14.0",
     "lodash": "^4.15.0",
     "mongoose": "^4.8.6",
+    "mongoose-paginate": "^5.0.3",
     "morgan": "^1.8.2",
     "winston": "^2.3.1",
     "winston-daily-rotate-file": "^1.4.6"
