--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "lodash": "^3.10.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-infinite-scroller": "^1.1.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-transition-group": "^2.2.1",
