--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "babel-preset-stage-1": "^6.1.18",
+    "is-subset": "^0.1.1",
     "lodash": "^3.10.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
