--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-infinite-scroller": "^1.1.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-transition-group": "^2.2.1",
     "reactstrap": "^5.0.0-alpha.4",
     "redux": "^3.7.2",
